sign in with facebook, recieve signup email verification code

--- a/src/views/auth.ejs
+++ b/src/views/auth.ejs
@@ -14,8 +14,10 @@
     <div class="jumbotron text-center text-primary">
         <h1><span class="fa fa-lock"></span> Social Authentication</h1>
         <p>Login or Register with:</p>
+
         <a href="/oauth/google" class="btn btn-danger"><span class="fa fa-google"></span> SignIn with Google</a>
-        <a href="/oauth/google" class="btn btn-info"><span class="fa fa-google"></span> SignIn with Facebook</a>
+        
+        <a href="/auth/facebook" class="btn btn-info"><span class="fa fa-google"></span> SignIn with Facebook</a>
     </div>
 </div>
 </body>
